# kontrolo

./: .gitmodules
client/: Cargo.toml
client/src/: client.rs  commands_executor.rs  config.rs  main.rs  processes_watcher.rs  script.rs  scripts.rs  server_api.rs
server/: main.py
server/client/: api.py  client.py  clients_controller.py  processes_filters.py
