[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.5"
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
tungstenite = {version = "0.24.0", features = ["url"]}
dict = "0.1.5"
url = "2.5.2"
log = "0.4.22"
sysinfo = "0.32.0"
toml = "0.8.19"